# voice-agents

./: .env.example  .gitignore  PHASE-1-MVP.md  PHASE-2-PRODUCTION.md  PHASE-3-SCALE.md  README.md  RESEARCH-BARGE-IN.md  conftest.py  pyproject.toml
assets/fillers/en_IN/: hello.raw  hmm.raw  let_me_check.raw  okay.raw  sure.raw
assets/fillers/hi_IN/: acchaa.raw  dekhti_hoon.raw  ek_minute.raw  haan.raw  hmm.raw  ji.raw  namaste.raw
assets/fillers/kn_IN/: haudu.raw  hmm.raw  namaskara.raw  nodteeni.raw  sari.raw
assets/fillers/ta_IN/: aama.raw  hmm.raw  paarkiren.raw  sari.raw  vanakkam.raw
assets/fillers/te_IN/: avunu.raw  chustanu.raw  hmm.raw  namaskaram.raw  oka_nimisham.raw  sare.raw
scripts/: benchmark_jewellery.py  benchmark_llm.py  benchmark_pipeline.py  benchmark_warm.py  generate_fillers.py  make_call.py  optimize_pipeline.py  optimize_v2.py  simulate_call.py
src/: config.py  echo_test.py  greeting_test.py  main.py  tone_test.py  tts_pool.py
src/audio/: codec.py
src/pipeline/: barge_in.py  filler.py  orchestrator.py  turn_engine.py
src/security/: telnyx.py
src/services/llm/: sarvam.py
src/services/stt/: sarvam.py
src/services/telephony/: enablex.py
src/services/tts/: sarvam.py
tests/: test_barge_in.py  test_codec.py  test_telnyx_signature.py  test_turn_engine.py
