[project]
name = "voice-agent"
version = "0.1.0"
description = "India-first multilingual voice AI agent for telephony"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13.0",
    "httpx>=0.27",
    "openai>=1.50",
    "pydantic-settings>=2.0",
    "numpy>=1.26",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "pynacl>=1.5",
    # audioop was removed from the stdlib in Python 3.13; this backport restores it.
    "audioop-lts>=0.2; python_version >= '3.13'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
